--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "swagger-ui-express": "^4.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.3",
     "ts-node-dev": "^1.1.6",
+    "types": "^0.1.1",
     "typescript": "^4.2.2"
   }
 }
